2003-06-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* alocal.in: Use Automake::Configure_ac.
	($configure_ac): Delete.
	(scan_configure): Adjust use of find_configure_ac;
	* automake.in: Use Automake::Configure_ac.
	($configure_ac): Delete.
	(scan_autoconf_files): Adjust use of find_configure_ac;
	* lib/Automake/Configure_ac.pm: New file.
	* lib/Automake/General.pm (find_configure_ac): Delete.  Now
	replaced by Automake::Configure_ac::search_configure_ac.
	* lib/Automake/Makefile.am (dist_perllib_DATA): Add Configure_ac.pm.
	* lib/Automake/Variable.pm: Use Automake::Configure_ac.
	(require_variables): Adjust use of $configure_ac.

2003-06-02  Akim Demaille  <akim@epita.fr>

	* lib/am/texi-vers.am, lib/am/subdirs.am, lib/am/scripts.am,
	* lib/am/remake-hdr.am, lib/am/python.am, lib/am/progs.am,
	* lib/am/program.am, lib/am/multilib.am, lib/am/mans.am,
	* lib/am/mans-vars.am, lib/am/ltlibrary.am, lib/am/ltlib.am,
	* lib/am/lisp.am, lib/am/libtool.am, lib/am/library.am,
	* lib/am/lang-compile.am, lib/am/java.am, lib/am/header.am,
	* lib/am/header-vars.am, lib/am/footer.am, lib/am/depend.am,
	* lib/am/dejagnu.am, lib/am/data.am, lib/am/compile.am,
	* lib/am/clean.am, lib/am/clean-hdr.am, lib/am/check.am,
	* lib/am/ansi2knr.am, lib/am/Makefile.am, lib/Makefile.am,
	* m4/strip.m4, m4/sanity.m4, m4/runlog.m4, m4/regex.m4,
	* m4/python.m4, m4/protos.m4, m4/options.m4, m4/obsolete.m4,
	* m4/obsol-lt.m4, m4/obsol-gt.m4, m4/multi.m4, m4/missing.m4,
	* m4/minuso.m4, m4/maintainer.m4, m4/lispdir.m4, m4/lex.m4,
	* m4/install-sh.m4, m4/header.m4, m4/gcj.m4, m4/dmalloc.m4,
	* m4/depout.m4, m4/cond.m4, m4/ccstdc.m4, m4/auxdir.m4, m4/as.m4,
	* m4/Makefile.am: White space changes and Copyright updates.

2003-05-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (check_defined_unconditionally): Add
	the $parent_cond argument.
	(output): Use $self->name in diagnostic not $self.
	(variable_value_as_list): Rename as ...