@@ -236,7 +236,7 @@ sub parse_arguments (@)
 
 sub scan_configure ()
 {
-    find_configure_ac;
+    require_configure_ac;
 
     open (CONFIGURE, $configure_ac)
 	|| die "aclocal: couldn't open `$configure_ac': $!\n";
