@@ -5079,7 +5079,7 @@ sub scan_autoconf_files
     # that won't always be the case.
     %libsources = ();
 
-    scan_autoconf_traces (find_configure_ac);
+    scan_autoconf_traces (require_configure_ac);
 
     # Set input and output files if not specified by user.
     if (! @input_files)
