@@ -1,5 +1,12 @@
 2003-06-03  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* lib/Automake/Configure_ac.pm
+	(search_configure_ac, find_configure_ac): Rename as ...
+	(find_configure_ac, require_configure_ac): ... these.
+	* aclocal.in (scan_configure): Adjust call to require_configure_ac.
+	* automake.in (scan_autoconf_files): Likewise.
+	Suggested by Tim Van Holder.
+
 	* alocal.in: Use Automake::Configure_ac.
 	($configure_ac): Delete.
 	(scan_configure): Adjust use of find_configure_ac;
